Explicitní zobrazení neznámého paliva jako "???"

--- a/includes-local/dashboard-teplaren/palivo.html
+++ b/includes-local/dashboard-teplaren/palivo.html
@@ -14,6 +14,7 @@
         {%- when "nuclear" -%} jaderné teplo
         {%- when "srf" -%} TAP
         {%- when "syngas" -%} energoplyn
+        {%- when "unknown" -%} ???
         {%- when "wasteheat" -%} odpadní teplo
     {%- endcase -%}
 {%- endcapture %}
