Drobné ladenie testimoniálov

--- a/collections/_pages/atlas-dekarbonizace.html
+++ b/collections/_pages/atlas-dekarbonizace.html
@@ -175,7 +175,7 @@ include_in_search: true
             </div>
         </div>
         <div class="testimonial-card">
-            <p class="text">Fakta o klimatu přinášejí české veřejnosti tolik potřebná data a dokážou jednoduše a přehledně vysvětlit složitou problematiku dekarbonizace, která je bohužel v současnosti spojena s řadou nepravd a je využívána jako nástroj politické manipulace. Doporučuji proto všem, kteří se chtějí v tématu zorientovat, četbu Atlasu dekarbonizace. Už jen proto, abyste dokázali vést věcnou diskusi a byli nejlépe informovaným člověkem v místnosti 😊</p>
+            <p class="text">Fakta o klimatu přinášejí české veřejnosti tolik potřebná data a dokážou <b>jednoduše a přehledně vysvětlit složitou problematiku dekarbonizace</b>, která je bohužel v současnosti spojena s řadou nepravd a je využívána jako nástroj politické manipulace. Doporučuji proto všem, kteří se chtějí v tématu zorientovat, četbu Atlasu dekarbonizace. Už jen proto, abyste dokázali vést věcnou diskusi a byli nejlépe informovaným člověkem v místnosti 😊</p>
             <div class="person-info">
                 <div class="photo"><img src="/assets-local/{{ page.slug }}/testimonial-photos/vobecka.jpg" alt="Kristýna Vobecká"></div>
                 <span class="name">Kristýna Vobecká</span>
@@ -184,7 +184,7 @@ include_in_search: true
         </div>
 
         <div class="testimonial-card">
-            <p class="text">Atlas je výborný podklad pro dekarbonizační strategii České republiky a doporučuji ho každému, kdo chce chápat, co dekarbonizace znamená – bez zjednodušování, ale srozumitelně, věcně. Banky potřebují dobře posoudit rizika i příležitosti spojené s přechodem na nízkouhlíkové hospodářství a tento Atlas je pro nás mimořádně srozumitelný a praktický zdroj.</p>
+            <p class="text">Atlas je výborný podklad pro dekarbonizační strategii České republiky a doporučuji ho každému, kdo chce chápat, co dekarbonizace znamená – <b>bez zjednodušování, ale srozumitelně, věcně</b>. Banky potřebují dobře posoudit rizika i příležitosti spojené s přechodem na nízkouhlíkové hospodářství a tento Atlas je pro nás mimořádně srozumitelný a praktický zdroj.</p>
             <div class="person-info">
                 <div class="photo"><img src="/assets-local/{{ page.slug }}/testimonial-photos/beranova.jpg" alt="Blanka Beranová"></div>
                 <span class="name">Blanka Beranová</span>
@@ -193,7 +193,7 @@ include_in_search: true
         </div>
 
         <div class="testimonial-card">
-            <p class="text">Atlas jsou skvěle shromážděné klíčové informace o dekarbonizaci. Nelze najít nic srovnatelného ani v rámci Evropy, ani v rámci světa, pokud budete hledat zároveň hloubku znalostí, komplexnost pohledu a jasnost komunikace.</p>
+            <p class="text">Atlas jsou skvěle shromážděné klíčové informace o dekarbonizaci. <b>Nelze najít nic srovnatelného ani v rámci Evropy, ani v rámci světa</b>, pokud budete hledat zároveň hloubku znalostí, komplexnost pohledu a jasnost komunikace.</p>
             <div class="person-info">
                 <div class="photo"><img src="/assets-local/{{ page.slug }}/testimonial-photos/keltner.jpg" alt="Miloslav Keltner"></div>
                 <span class="name">Miloslav Keltner</span>
@@ -211,7 +211,7 @@ include_in_search: true
         </div>
 
         <div class="testimonial-card">
-            <p class="text">Povinné čtení pro klima optimisty i klima skeptiky, vlastně pro všechny, kdo chtějí data a fakta o energetické transformaci.</p>
+            <p class="text">Povinné <b>čtení pro klima optimisty i klima skeptiky</b>, vlastně pro všechny, kdo chtějí data a fakta o energetické transformaci.</p>
             <div class="person-info">
                 <div class="photo"><img src="/assets-local/{{ page.slug }}/testimonial-photos/cepicky.jpg" alt="Jáchym Čepický"></div>
                 <span class="name">Jáchym Čepický</span>
@@ -221,7 +221,7 @@ include_in_search: true
         </div>
     </div>
     <button class="testimonials-toggle" type="button" aria-expanded="false">
-        Zobrazit všechny ohlasy
+        Zobraz více ohlasů
     </button>
 </section>
 
