Zmena hlavného textu a online badge.

--- a/collections/_pages/atlas-dekarbonizace.html
+++ b/collections/_pages/atlas-dekarbonizace.html
@@ -18,7 +18,7 @@ include_in_search: true
     <div class="hero-content">
         <div class="hero-text">
             <h1>Atlas <br>dekarbonizace <br>Česka</h1>
-            <p>Řešení existují. S dnes dostupnými technologiemi, bez obětování prosperity. Vizuální průvodce transformací v přehledné publikaci.</p>
+            <p>Řešení existují. S dnes dostupnými technologiemi. A bez obětování prosperity.</p>
             <a href="/assets-local/files/atlas-dekarbonizace-ceska.pdf" class="btn-primary btn-cta" target="_blank">Stáhnout Atlas v PDF</a>
         </div>
 
@@ -33,17 +33,17 @@ include_in_search: true
     <div class="features-grid">
         <div class="feature-card">
             <img src="/assets-local/{{ page.slug }}/ilustrace-mapa.svg" alt="Emise" class="feature-icon">
-            <strong>Skrze data přináší porozumění hlavním zdrojům emisí skleníkových plynů v 6 sektorech.</strong>
+            <strong>Skrze data přináší porozumění</strong> hlavním zdrojům emisí skleníkových plynů v 6 sektorech.
         </div>
 
         <div class="feature-card">
             <img src="/assets-local/{{ page.slug }}/ilustrace-technologie.svg" alt="Budovy" class="feature-icon">
-            <strong>Představuje reálné technologie a postupy pro dosažení téměř nulových emisí.</strong>
+            <strong>Představuje reálné technologie</strong> a postupy pro dosažení téměř nulových emisí.
         </div>
 
         <div class="feature-card">
             <img src="/assets-local/{{ page.slug }}/ilustrace-koncepty.svg" alt="Infografiky" class="feature-icon">
-            <strong>Ukazuje celkový scénář možné nízkoemisní budoucnosti Česka podložený výpočty.</strong>
+            <strong>Ukazuje celkový scénář</strong> možné nízkoemisní budoucnosti Česka podložený výpočty.
         </div>
     </div>
 </section>
