Drobné úpravy carouselu

--- a/collections/_pages/atlas-dekarbonizace.html
+++ b/collections/_pages/atlas-dekarbonizace.html
@@ -218,6 +218,14 @@ include_in_search: true
                 <span class="institution">GIS vývojář</span>
             </div>
         </div>
+
+        <div class="testimonial-card">
+            <p class="text">Jako datový novinář jsem se před lety v Českém rozhlasu zaměřoval i na klima. Už nemusím, Fakta o klimatu mě dokonale nahradila. Atlas dekarbonizace je kniha, kterou bych si býval přál napsat. Kéž mě podobné iniciativy nahradí stejně dobře i v jiných oblastech!</p>
+            <div class="person-info">
+                <div class="photo"><img src="/assets-local/{{ page.slug }}/testimonial-photos/cepicky.jpg" alt="Jáchym Čepický"></div>
+                <span class="name">Jan Boček</span>
+                <span class="institution">GIS vývojář</span>
+            </div>
         </div>
     </div>
     <button class="testimonials-toggle" type="button" aria-expanded="false">
