Umožnit Atlas dekarbonizace jako boxík

--- a/collections/_pages/atlas-dekarbonizace.html
+++ b/collections/_pages/atlas-dekarbonizace.html
@@ -7,6 +7,8 @@ redirect_from:
 body-class: landing-page-atlas-dekarbonizace
 extra-scripts: [ /assets-local/js/atlas-dekarbonizace.js ]
 include_in_search: true
+preview_type: Publikace
+preview_image: /assets-local/atlas-dekarbonizace/atlas-dekarbonizace-cover.png
 ---
 <!-- Floating Online Badge -->
 <a href="https://dekarbonizujemecesko.cz/" target="_blank" class="online-badge-float">
