Přidání testimoniálu (Laura Otýpková)

--- a/collections/_pages/atlas-dekarbonizace.html
+++ b/collections/_pages/atlas-dekarbonizace.html
@@ -159,11 +159,11 @@ preview_image: /assets-local/atlas-dekarbonizace/atlas-dekarbonizace-cover.png
             </div>
         </div>
         <div class="testimonial-card">
-            <p class="text">Data o tom, jak se zbavit závislosti na uhlí, ropě a plynu, shromážděná do jedné přehledné bichle. Určitě si to přečtěte, možná zjistíte, že <b>ležet ve statistikách je stejně zábavné jako jezdit prstem po mapě</b>.</p>
+            <p class="text">Oceňuji, že <b>Atlas přináší společný jazyk</b>, kterým mezi sebou můžeme o dekarbonizaci mluvit a společně hledat řešení. Obrovský přínos vidím také v mezioborových vztazích, které Atlas rozkrývá - není to publikace zaměřená jen na jeden sektor, nebo jen na technické, sociální, nebo politické aspekty - všechny roviny se propojují. Jestli něco potřebujeme v dnešní době, tak je to právě společná řeč a vize, že dekarbonizace je možná a výhodná. </p>
             <div class="person-info">
-                <div class="photo"><img src="/assets-local/{{ page.slug }}/testimonial-photos/kotecky.jpg" alt="Vojtěch Kotecký"></div>
-                <span class="name">Vojtěch Kotecký</span>
-                <span class="institution">Centrum pro otázky životního prostředí UK</span>
+                <div class="photo"><img src="/assets-local/{{ page.slug }}/testimonial-photos/otypkova.jpg" alt="Laura Otýpková"></div>
+                <span class="name">Laura Otýpková</span>
+                <span class="institution">vedoucí týmu Odpovědná energie, Frank Bold</span>
             </div>
         </div>
         <div class="testimonial-card">
@@ -172,6 +172,14 @@ preview_image: /assets-local/atlas-dekarbonizace/atlas-dekarbonizace-cover.png
                 <div class="photo"><img src="/assets-local/{{ page.slug }}/testimonial-photos/niedermayer.jpg" alt="Luděk Niedermayer"></div>
                 <span class="name">Luděk Niedermayer</span>
                 <span class="institution">Europoslanec, bývalý viceguvernér ČNB</span>
+            </div>
+        </div>
+        <div class="testimonial-card">
+            <p class="text">Data o tom, jak se zbavit závislosti na uhlí, ropě a plynu, shromážděná do jedné přehledné bichle. Určitě si to přečtěte, možná zjistíte, že <b>ležet ve statistikách je stejně zábavné jako jezdit prstem po mapě</b>.</p>
+            <div class="person-info">
+                <div class="photo"><img src="/assets-local/{{ page.slug }}/testimonial-photos/kotecky.jpg" alt="Vojtěch Kotecký"></div>
+                <span class="name">Vojtěch Kotecký</span>
+                <span class="institution">Centrum pro otázky životního prostředí UK</span>
             </div>
         </div>
         <div class="testimonial-card">
