--- a/includes-local/dashboard-teplaren/teplarenska-soustava.html
+++ b/includes-local/dashboard-teplaren/teplarenska-soustava.html
@@ -2,7 +2,7 @@
 <div class="card status-{{ facility.status }}" id="{{ facility.name | slugify: "latin" }}">
     <div class="card-body">
         <div>
-            <h4>{{ facility.name_details }}</h4>
+            <h4>{{ facility.name_details }} ({{ facility.owner }})</h4>
             <h3>{{ facility.name }}</h3>
             <p class="status-line">
                 {% include includes-local/dashboard-teplaren/status-icon.html status=facility.status %}
@@ -78,7 +78,7 @@
                 <dt><i class="fa-solid fa-sack-dollar"></i> Dotace z Mod. fondu</dt>
                 <dd class="mf-total"><b>{{ facility.mf_subsidies_total | format_number }}</b> mil. Kč</dd>
                 <div class="mf-per-household mb-3">(<b>{{ facility.mf_subsidies_per_household | format_number }}</b> Kč/vytápěnou domácnost)</div>
-                {% if facility.chp_subsidies %}
+                {% if facility.chp_subsidies and facility.chp_subsidies_total_accepted > 0 %}
                 <dd class="not-detail">+ provozní podpora pro {{ facility.chp_subsidies_total_accepted }} MW</dd>
                 {% endif %}
                 {% for subsidy in facility.mf_subsidies %}
@@ -93,22 +93,19 @@
             {% else %}
                 <dt>Žádné dotace z Modern. fondu</dt>
                 <dd class="mf-total"><b class="zero">0</b> Kč</dd>
-                {% if facility.chp_subsidies %}
+                {% if facility.chp_subsidies and facility.chp_subsidies_total_accepted > 0 %}
                 <dd class="not-detail">+ provozní podpora pro {{ facility.chp_subsidies_total_accepted }} MW</dd>
                 {% endif %}
             {% endif %}
-            {% if facility.chp_subsidies %}
+            {% if facility.chp_subsidies and facility.chp_subsidies_total_accepted > 0 %}
                 <dt class="detail mt-3"><i class="fa-solid fa-sack-dollar"></i> Provozní podpora KVET</dt>
                 {% for subsidy in facility.chp_subsidies %}
                 {% if subsidy.status == "accepted" %}
-                {% assign status_text = "Schválená provozní podpora" %}
-                {% else %}
-                {% assign status_text = "Neschválená provozní podpora" %}
-                {% endif %}
-                <dd class="detail status-{{ subsidy.status }}" title="{{ status_text }}" data-toggle="tooltip">
+                <dd class="detail">
                     {{ subsidy.fuel }} (od {{ subsidy.since }})<br>
                     <strong>{{ subsidy.power }} MWe</strong>
                 </dd>
+                {% endif %}
                 {% endfor %}
             {% endif %}
         </dl>
